Final frontend commit

--- a/calender_frontend/public/index.html
+++ b/calender_frontend/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>calender Application</title>
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <title>Calendar Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
